--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=8080
 
+# DB
+spring.datasource.url=jdbc:mysql://localhost:3306/football_fantasy
+spring.datasource.username=root
+spring.datasource.password=
+
+# Liquibase
+spring.liquibase.enabled=true
+
+# JPA
+spring.jpa.show-sql=true
