--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -59,8 +59,8 @@ databaseChangeLog:
                  result varchar(10),
                  date_time timestamp default current_timestamp,
                  venue varchar(50),
-                 host_id bigint,
-                 guest_id bigint,
+                 host_id bigint not null,
+                 guest_id bigint not null,
                  gameweek_id bigint not null);
 
               alter table matches add constraint fk_host_club foreign key(host_id) references clubs(id);
