--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -171,7 +171,7 @@ databaseChangeLog:
            sql: |
            
               alter table players
-              add price decimal(4,3) not null,
+              add price decimal(2,1) not null,
               add total_points int not null;
 
               create table users(
@@ -191,7 +191,7 @@ databaseChangeLog:
 
               alter table users add constraint fk_favourite_club foreign key(favourite_club_id) references clubs(id);
 
-              create table user_teams(
+              create table teams(
                  id bigint primary key auto_increment,
                  created_on timestamp not null default current_timestamp,
                  modified_on timestamp not null default current_timestamp,
@@ -202,29 +202,29 @@ databaseChangeLog:
                  vice_captain_id bigint not null,
                  user_id bigint not null);
 
-              alter table user_teams add constraint fk_captain foreign key(captain_id) references players(id);
-              alter table user_teams add constraint fk_vice_captain foreign key(vice_captain_id) references players(id);
-              alter table user_teams add constraint fk_user foreign key(user_id) references users(id);
+              alter table teams add constraint fk_captain foreign key(captain_id) references players(id);
+              alter table teams add constraint fk_vice_captain foreign key(vice_captain_id) references players(id);
+              alter table teams add constraint fk_user foreign key(user_id) references users(id);
 
-              create table user_team_players(
+              create table team_players(
                  id bigint primary key auto_increment,
                  created_on timestamp not null default current_timestamp,
                  modified_on timestamp not null default current_timestamp,
                  points int not null,
                  on_bench boolean not null,
                  player_id bigint not null,
-                 user_team_id bigint not null);
+                 team_id bigint not null);
 
-              alter table user_team_players add constraint fk_player foreign key(player_id) references players(id);
-              alter table user_team_players add constraint fk_user_team foreign key(user_team_id) references user_teams(id);
+              alter table team_players add constraint fk_player foreign key(player_id) references players(id);
+              alter table team_players add constraint fk_user_team foreign key(team_id) references teams(id);
 
-              create table user_team_gameweek_performances(
+              create table team_gameweek_performances(
                  id bigint primary key auto_increment,
                  created_on timestamp not null default current_timestamp,
                  modified_on timestamp not null default current_timestamp,
                  points int not null,
-                 user_team_id bigint not null,
+                 team_id bigint not null,
                  gameweek_id bigint not null);
 
-              alter table user_team_gameweek_performances add constraint fk_utgp_user_team foreign key(user_team_id) references user_teams(id);
-              alter table user_team_gameweek_performances add constraint fk_utgp_gameweek foreign key(gameweek_id) references gameweeks(id);
+              alter table team_gameweek_performances add constraint fk_utgp_user_team foreign key(team_id) references teams(id);
+              alter table team_gameweek_performances add constraint fk_utgp_gameweek foreign key(gameweek_id) references gameweeks(id);
