--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -228,3 +228,15 @@ databaseChangeLog:
 
               alter table team_gameweek_performances add constraint fk_utgp_user_team foreign key(team_id) references teams(id);
               alter table team_gameweek_performances add constraint fk_utgp_gameweek foreign key(gameweek_id) references gameweeks(id);
+
+   - changeSet:
+      id: club-manager
+      author: deniskuzner@gmail.com
+      
+      changes:
+         - sql:
+           comment: Adding manager field in club
+           strip-comments: true
+           sql: |
+           
+              alter table clubs add manager varchar(40) not null;
