Zapocet rest i service layer za Team i User.

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -240,3 +240,15 @@ databaseChangeLog:
            sql: |
            
               alter table clubs add manager varchar(40) not null;
+
+   - changeSet:
+      id: user-country
+      author: deniskuzner@gmail.com
+      
+      changes:
+         - sql:
+           comment: Removing country field from users table
+           strip-comments: true
+           sql: |
+           
+              alter table users drop column country;
