TeamGameweekPerformance racunanje. Izdvojen TeamGameweekPerformance servis. Racunanje gw stats. Izmene parsiranja meceva zbog promena na fbref.com

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.liquibase.enabled=true
 
 # JPA
 spring.jpa.show-sql=true
+
+# Jackson
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
